# news_rec

./: .gitignore  README.md  demo  main.py  pyproject.toml  readme.md  test.py
config/: common.py
config/model/: nrms.py  rq_ave.py  tf.py
config/process/: generate_code.py
nodebook/: demo.ipynb  embedding.ipynb  embedding_1.ipynb  index.ipynb  review_data.ipynb  split_data.ipynb  valid.ipynb
rank/data/: dataset.py
rank/model/: NRMS.py  TextEncoder.py
rank/trainer/: train.py  valid.py
rank/utils/: metric.py  processData.py
recall/rq_ave/: generate_code.py  main.py
recall/rq_ave/data/: rqave_dataset.py
recall/rq_ave/model/: RQ_VAE.py
recall/rq_ave/model/components/: layers.py  rq.py  vq.py
recall/rq_ave/trainer/: rqave_trainer.py
recall/transformer/: main.py
recall/transformer/data/: tf_dataset.py
recall/transformer/model/: transformer.py
recall/utils/: collision.py  metrics.py  rqave.py  tf_processor.py
utils/: metric.py
