[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["rank","config", "recall"]
exclude = ["Data",'Embedding_model', "nodebook"]

[project]
name = "news_rec"
version = "0.1.0"
description = "news recommendation system"
authors = [{name = "mingyu"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "torch"
]
